Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16051

o2iblnd: link modification via "ip link set" is not picked up by local ni status

XMLWordPrintable

    • 3
    • 9223372036854775807

      As pointed out by Arthur Novik, "ip link set ib0 down" command fails to result in local NI status change to "down" as seen in "lnetctl new show" output.

      At the same time, events like manual cable pull or "ibportstate disable/enable", i.e. IB-layer events, are handled properly.

       

       

            ssmirnov Serguei Smirnov
            ssmirnov Serguei Smirnov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: